--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
+    "bundle": "npm run bundle --workspaces --if-present",
     "serve-jekyll": "npx http-server ./docs/_site -p 4000 --cors",
     "clean": "npm run clean --workspaces --if-present",
-    "build": "npm run build:00 --workspaces --if-present && npm run build:01 --workspaces --if-present && npm run build:02 --workspaces --if-present && npm run build:03 --workspaces --if-present && npm run build:04 --workspaces --if-present && npm run build:05 --workspaces --if-present && npm run build:06 --workspaces --if-present && npm run build:07 --workspaces --if-present && npm run build:08 --workspaces --if-present",
+    "build": "npm run build:00 --workspaces --if-present && npm run build:01 --workspaces --if-present && npm run build:02 --workspaces --if-present && npm run build:03 --workspaces --if-present && npm run build:04 --workspaces --if-present && npm run build:05 --workspaces --if-present && npm run build:06 --workspaces --if-present && npm run build:07 --workspaces --if-present && npm run build:08 --workspaces --if-present && npm run bundle",
     "build-host": "npm run build -w @microsoft/chartifact-markdown && npm run build -w @microsoft/chartifact-sandbox && npm run build -w @microsoft/chartifact-host",
     "start": "concurrently \"npm run dev -w common\" \"npm run dev -w @microsoft/chartifact-markdown\" \"npm run dev -w @microsoft/chartifact-schema\" \"npm run dev -w @microsoft/chartifact-compiler\" \"npm run dev -w @microsoft/chartifact-editor\"",
     "package": "npm run package --workspaces --if-present"
