--- a/packages/host/package.json
+++ b/packages/host/package.json
@@ -15,7 +15,7 @@
     "prebuild": "npm run resources",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
-    "build": "npm run tsc && npm run bundle",
+    "build": "npm run tsc",
     "build:05": "npm run build",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
