--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -11,7 +11,7 @@
     "watch": "tsc -p . -w",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
-    "build": "npm run tsc && npm run bundle",
+    "build": "npm run tsc",
     "build:03": "npm run build"
   },
   "repository": {
