--- a/packages/sandbox/package.json
+++ b/packages/sandbox/package.json
@@ -11,7 +11,7 @@
     "prebuild": "npm run resources",
     "tsc": "tsc -p .",
     "bundle": "vite build --config vite.bundle.config.js",
-    "build": "npm run tsc && npm run bundle",
+    "build": "npm run tsc",
     "build:04": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
