--- a/packages/toolbar/package.json
+++ b/packages/toolbar/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "tsc": "tsc -p .",
+    "bundle": "vite build --config vite.bundle.config.js",
     "build": "npm run tsc",
     "postbuild": "node ./scripts/copy-css.mjs",
     "build:04": "npm run build"
