--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-commonjs": "^28.0.5",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@types/assert": "^1.5.11",
+    "@types/jsdom": "^21.1.7",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.0.3",
     "@types/tabulator-tables": "^6.2.6",
