--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
       - "4000:4000"
     volumes:
       - ./docs:/srv/jekyll
-    command: bundle exec jekyll serve --host 0.0.0.0 --port 4000 --livereload
+    command: bundle exec jekyll serve --host 0.0.0.0 --port 4000 --force_polling
