Add adm-zip and @types/adm-zip to dependencies

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rollup/plugin-commonjs": "^28.0.5",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@types/adm-zip": "^0.5.7",
     "@types/assert": "^1.5.11",
     "@types/jsdom": "^21.1.7",
     "@types/mocha": "^10.0.10",
@@ -38,6 +39,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-react": "^4.6.0",
     "@vscode/test-web": "^0.0.69",
+    "adm-zip": "^0.5.16",
     "assert": "^2.1.0",
     "concurrently": "^9.2.0",
     "css-tree": "^3.1.0",
