--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rollup/plugin-commonjs": "^28.0.5",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "@types/adm-zip": "^0.5.7",
     "@types/assert": "^1.5.11",
     "@types/jsdom": "^21.1.7",
     "@types/mocha": "^10.0.10",
@@ -39,7 +38,6 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-react": "^4.6.0",
     "@vscode/test-web": "^0.0.69",
-    "adm-zip": "^0.5.16",
     "assert": "^2.1.0",
     "concurrently": "^9.2.0",
     "css-tree": "^3.1.0",
@@ -60,6 +58,7 @@
   "dependencies": {
     "@mdit/plugin-attrs": "^0.22.0",
     "@mdit/plugin-container": "^0.22.0",
+    "fflate": "^0.8.2",
     "markdown-it": "^14.1.0",
     "tabulator-tables": "^6.3.1",
     "vega": "^6.1.2",
