--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -155,6 +155,7 @@
     "test": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. --extensionTestsPath=dist/web/test/suite/extensionTests.js",
     "pretest": "npm run compile-web",
     "vscode:prepublish": "npm run package-web",
+    "prebuild": "npm run resources",
     "build": "npm run resources && npm run compile-web",
     "build:08": "npm run build",
     "compile-web": "npm run check-types && npm run lint && npm run resources && node esbuild.js",
