--- a/packages/toolbar/tsconfig.json
+++ b/packages/toolbar/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "../tsconfig.base.json",
     "compilerOptions": {
+        "jsx": "react",
+        "jsxFactory": "createElement",
         "outDir": "dist/esnext"
     },
     "include": [
